[package]
name = "ada_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.4"
uart_16550 = "0.6.0"
pic8259 = "0.10.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300 
test-success-exit-code = 33  

[profile.dev]


[profile.release]
panic = "abort"

[[bin]]
name = "ada_os"
test = true
bench = false

[[test]]
name = "stack_overflow"
harness = false
